--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@radix-ui/react-menubar": "^1.1.12",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "formik": "^2.4.6",
     "lucide-react": "^0.503.0",
     "next": "14.2.16",
